refactored select cars css and is much cleaner. Nav.js now has state which takes the menu state and creates the body class on state change. When the menu is opened the body becomes fixed with no overflow. This allows the user to maintain UI position and not allow the content behind the menu to scroll up or down while opened.

--- a/src/styles/components/_base.scss
+++ b/src/styles/components/_base.scss
@@ -16,7 +16,16 @@ body{
   max-width: 140rem;
   display:block;
   margin: 0 auto;
-  z-index: initial;
+  // z-index: initial;
+}
+.body-container--overflow{
+  max-width: 140rem;
+  display:block;
+  margin: 0 auto;
+  // z-index: initial;
+  max-height: 110vh;
+  position:fixed;
+  overflow: hidden;
 }
 .landingContain{
   overflow: hidden;
