--- a/src/styles/components/_slideShowModal.scss
+++ b/src/styles/components/_slideShowModal.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items:center;
   // transition: opacity 200ms ease-in-out;
-  background-color:rgba(0, 0, 0, 0.568) !important;
+  background-color:rgba(0, 0, 0, 0.726) !important;
 }
 
 // .ReactModalPortal{
