--- a/src/styles/mixins/_button.scss
+++ b/src/styles/mixins/_button.scss
@@ -126,7 +126,7 @@
     font-weight:bold;
     text-transform:uppercase;
     position:relative;
-    z-index: 1;
+    // z-index: 1;
     pointer-events:none;
     letter-spacing: 1px;
   }
@@ -169,7 +169,7 @@
     font-weight:bold;
     text-transform:uppercase;
     position:relative;
-    z-index: 1;
+    // z-index: 1;
     pointer-events:none;
     letter-spacing: 1px;
   }
@@ -209,7 +209,7 @@
     font-weight:bold;
     text-transform:uppercase;
     position:relative;
-    z-index: 1;
+    // z-index: 1;
     pointer-events:none;
     letter-spacing: 1px;
   }
